# GWCA-Template

./: CMakeLists.txt  README.md
cmake/: gwca.cmake  imgui.cmake  minhook.cmake
src/: DllMain.cpp  draw.cpp  draw.h  hooks.cpp  hooks.h  imconfig.h  pch.h
src/ImGui/: imconfig.h  imgui.h  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_win32.cpp
